--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
   font-family: "Inter", sans-serif;
   height: -webkit-fill-available;
   overflow-x: hidden;
+  width: 100%;
   right: 0;
   /* height: 20000px; */
 }
