--- a/src/style.css
+++ b/src/style.css
@@ -12,12 +12,16 @@ html {
 }
 
 .profil {
-  border-radius: 10px 40px 10px 40px;
   transition: all 0.5s;
   cursor: pointer;
   object-fit: contain;
   min-width: 15rem;
 }
+
+.about-img{
+  border-radius: 10px 40px 10px 40px;
+}
+
 .profil:hover {
   border-radius: 20px 60px 20px 60px;
   filter: invert(10);
